fix welcome activity translate

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -25,21 +25,36 @@
         android:layout_marginTop="52dp"
         android:fontFamily="@font/museo_san_rounded900"
         android:text="@string/welcome"
+        android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="50sp"
+        android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/text_appName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/museo_san_rounded900"
+        android:text="@string/app_name"
+        android:textAlignment="center"
+        android:textColor="@color/lightBlue"
+        android:textSize="45sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_Welcome" />
+
+    <TextView
         android:id="@+id/text_note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/museo_san_rounded700"
+        android:fontFamily="@font/museo_san_rounded500"
         android:text="@string/welcome_title"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:layout_marginStart="35dp"
         android:layout_marginEnd="35dp"
