--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,4 +3,8 @@
     <style name="CustomPopupMenuStyle" parent="Widget.AppCompat.PopupMenu">
         <item name="android:textColor">#FF0000</item> <!-- Custom text color -->
     </style>
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Customize the positive button -->
+        <item name="colorAccent">#12aeef</item>
+    </style>
 </resources>
