--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -298,6 +298,7 @@
     <color name="lightGray">#8F939E</color>
     <color name="Blue">#055C9D</color>
     <color name="lightBlue">#12aeef</color>
+    <color name="UnitaYellow">#ffd006</color>
     <color name="red">#FF0000</color>
     <color name="darkPurple">#11001A</color>
 
