--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -150,7 +150,7 @@
         android:focusable="true"
         android:fontFamily="@font/museo_san_rounded500"
         android:text="@string/already_have_account_login"
-        android:textColor="@color/white"
+        android:textColor="@drawable/text_color_selector"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
