--- a/app/src/main/res/drawable/background_enter_btn.xml
+++ b/app/src/main/res/drawable/background_enter_btn.xml
@@ -1,9 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/navyBlue"> <!-- Define your ripple color -->
+    <item android:id="@android:id/background">
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
             <solid android:color="@color/lightBlue" />
         </shape>
     </item>
-</selector>
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="@android:color/white" />
+        </shape>
+    </item>
+</ripple>
